--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button type="button" id="rockButoon">Rock</button>
+    <button type="button" id="paperButton">Paper</button>
+    <button type="button" id="scissorsButton">Scissors</button>
+    <p id="playerChoice">The player choice is:</p>
+    <p id="computerChoice">The computer choice is:</p>
+    <p id="winnerOfTheRound">The winner of the round is:</p>
+    <p id="winnerOfTheGame">The winner of the game is:</p>
     <script src="script.js"></script>
   </body>
 </html>
