--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button type="button" id="rockButoon">Rock</button>
+    <button type="button" id="rockButton">Rock</button>
     <button type="button" id="paperButton">Paper</button>
     <button type="button" id="scissorsButton">Scissors</button>
     <p id="playerChoice">The player choice is:</p>
