Add paragraph for round dispaly.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button type="button" id="scissorsButton">Scissors</button>
     <p id="playerChoice">The player choice is:</p>
     <p id="computerChoice">The computer choice is:</p>
+    <p id="roundCounter">Round : 0</p>
     <p id="winnerOfTheRound">The winner of the round is:</p>
     <p id="winnerOfTheGame">The winner of the game is:</p>
     <script src="script.js"></script>
