--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button type="button" id="playAgainButton">PLAY</button>
+    <br />
     <button type="button" id="rockButton">Rock</button>
     <button type="button" id="paperButton">Paper</button>
     <button type="button" id="scissorsButton">Scissors</button>
