Linked tailwind file to html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock-Paper-Scissors</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./dist/output.css" />
   </head>
   <body>
     <button type="button" id="playAgainButton">PLAY</button>
@@ -13,13 +13,14 @@
     <button type="button" id="rockButton">Rock</button>
     <button type="button" id="paperButton">Paper</button>
     <button type="button" id="scissorsButton">Scissors</button>
-    <p id="playerChoice">The player choice is:</p>
+    <p id="playerChoice" class="bg-teal-900">The player choice is:</p>
     <p id="computerChoice">The computer choice is:</p>
     <p id="playerScore">Player score:</p>
     <p id="computerScore">Computer score:</p>
     <p id="roundCounter">Round 0 of 5</p>
     <p id="winnerOfTheRound">The winner of the round is:</p>
     <p id="winnerOfTheGame">The winner of the game is:</p>
+    <h1 class="text-3xl font-bold underline">Hello world!</h1>
     <script src="script.js"></script>
   </body>
 </html>
