--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
     <button type="button" id="rockButton">Rock</button>
     <button type="button" id="paperButton">Paper</button>
     <button type="button" id="scissorsButton">Scissors</button>
-    <p id="playerChoice" class="bg-teal-900">The player choice is:</p>
+    <p id="playerChoice">The player choice is:</p>
     <p id="computerChoice">The computer choice is:</p>
     <p id="playerScore">Player score:</p>
     <p id="computerScore">Computer score:</p>
@@ -20,5 +21,9 @@
     <p id="winnerOfTheRound">The winner of the round is:</p>
     <p id="winnerOfTheGame">The winner of the game is:</p>
     <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+      integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+      crossorigin="anonymous"></script>
   </body>
 </html>
