Add all eleemts in div named 'game'.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,20 @@
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
-    <button type="button" id="playAgainButton">PLAY</button>
-    <br />
-    <button type="button" id="rockButton">Rock</button>
-    <button type="button" id="paperButton">Paper</button>
-    <button type="button" id="scissorsButton">Scissors</button>
-    <p id="playerChoice">The player choice is:</p>
-    <p id="computerChoice">The computer choice is:</p>
-    <p id="playerScore">Player score:</p>
-    <p id="computerScore">Computer score:</p>
-    <p id="roundCounter">Round 0 of 5</p>
-    <p id="winnerOfTheRound">The winner of the round is:</p>
-    <p id="winnerOfTheGame">The winner of the game is:</p>
-    <script src="script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-      integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-      crossorigin="anonymous"></script>
+    <div class="game">
+      <button type="button" id="playAgainButton">PLAY</button>
+      <br />
+      <button type="button" id="rockButton">Rock</button>
+      <button type="button" id="paperButton">Paper</button>
+      <button type="button" id="scissorsButton">Scissors</button>
+      <p id="playerChoice">The player choice is:</p>
+      <p id="computerChoice">The computer choice is:</p>
+      <p id="playerScore">Player score:</p>
+      <p id="computerScore">Computer score:</p>
+      <p id="roundCounter">Round 0 of 5</p>
+      <p id="winnerOfTheRound">The winner of the round is:</p>
+      <p id="winnerOfTheGame">The winner of the game is:</p>
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
